Revision history for Test-BrewBuild

1.00    2016-03-22
        - removed Plugin.pm, we now use Plugin::Simple for the plugin init work
        - BUILD_REQUIRES Mock::Sub v1.06 for testing purposes, so we can test
          without *brew installed (and if it is, we don't want to be managing
          instances)
        - finally got around to implementing a near full test suite (closes #4)
        - bumped major version number now that we're tested and stable

0.06    2016-03-21
        - added '--on' param, send in a list of perl versions to run against,
          instead of the default all (closes #17)
        - renamed 'count' param to 'new', kept change for backwards
          compatibility reasons (closes #23)
        - we can now load non-installed local plugins by specifying the full or
          relative path name plus name of file to the --plugin param (closes
          #24)
        - all *brew command creation moved to Test::BrewBuild::BrewCommands.pm
          (closes #19)
        - new round of unit tests
        - added debug logging to Test::BrewBuild::BrewCommands
        - added warning in Makefile.PL and skip a bunch of tests if *brew isn't 
          installed
        - 'brewbuild' command warns with a link to the respective *brew, and
          exits if it isn't installed

0.05    2016-03-18
        - we now recognize when Module::Build is being used, as opposed
          to EUMM, and it works properly (fixes #12)
        - *brew exec commands are now loaded via a plugin architecture. Set by
          the '-p|--plugin' or an environment variable, plugin writing is
          exceptionally simplistic
        - renamed --reload arg to --remove
        - fix undef issue in Plugin.pm if a plugin name can't be found
        - --debug param now accepts a level param (0-7) to set the level (added
          Logging::Simple as prereq)
        - remove all prereqs from Makefile.PL that are already in core
          (closes #15)